refactoring all the things
