# src/controllers/ping.ts
@@ -1,12 +1,0 @@
-import { Get, Route } from 'tsoa';
-import { PingResponse } from './types';
-
-@Route('ping')
-export default class PingController {
-    @Get('/')
-    public async getMessage(): Promise<PingResponse> {
-        return {
-            message: 'pong',
-        };
-    }
-}
